# NaxiStudioFlow

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/scripts/: BuildWindows.ps1
.github/workflows/: build.yml
backend/catalog/: fileslist.cpp  fileslist.h  folderslist.h
backend/functions/: timeFunctions.h
backend/player/: playerplaylistitem.cpp  playerplaylistitem.h
backend/playlist/: mastercontroller.cpp  mastercontroller.h  playlistcontoller.cpp  playlistcontoller.h  playlistcontroller.cpp  playlistcontroller.h
frontend/: flow.cpp  flow.h  flow.ui
frontend/resources/: Flow.rc  NaxiStudioFlow.rc  flow.qrc
frontend/widgets/: audio.cpp  audio.h  filewidget.cpp  filewidget.h
frontend/widgets/cartwall/: cartwallarea.cpp  cartwallarea.h  cartwallarea.ui  cartwallitem.cpp  cartwallitem.h  cartwallitem.ui
frontend/widgets/editor/: mixeditor.cpp  mixeditor.h  mixeditor.ui
frontend/widgets/playlist/: playlistitem.cpp  playlistitem.h  playlistitem.ui  programblock.cpp  programblock.h  programblock.ui
lang/: en_US.ts  pt_BR.ts  translations.qrc
